resolving relative file uri in lxaips