@@ -22,8 +22,10 @@
 package de.bund.bsi.tresor.aip.validator.signature;
 
 import java.io.ByteArrayInputStream;
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
@@ -185,9 +187,28 @@ public class CredentialSectionAnalyzer
     {
         try
         {
-            return Files.readAllBytes( Paths.get( new URL( url ).toURI() ) );
+            return Files.readAllBytes( Paths.get( URI.create( url ) ) );
         }
-        catch ( IOException | URISyntaxException e )
+        catch( IllegalArgumentException e )
+        {
+            if ( e.getMessage().equals( "Missing scheme" ) )
+            {
+                try
+                {
+                    return Files.readAllBytes( Paths.get( URI.create( "file://" + System.getProperty( "temp.folder.path" )
+                            + File.separatorChar + url ) ) );
+                }
+                catch ( IOException ex )
+                {
+                    ModuleLogger.verbose( "could not retrieve lxaip data from dataObject", e );
+                }
+            }
+            else
+            {
+                throw e;
+            }
+        }
+        catch ( IOException e )
         {
             // could not read lxaip data
             ModuleLogger.verbose( "could not retrieve lxaip data from dataObject", e );
